Fixes menu appearing behind forums z-index

--- a/app/assets/stylesheets/layout/_body.scss
+++ b/app/assets/stylesheets/layout/_body.scss
@@ -42,7 +42,7 @@ body#tinymce {
   background: image-url('layout/body-background.png') top center repeat-y;
 
   &.full {
-    padding-top: 20px;
+    padding-top: 40px;
     background-image: image-url('layout/body-background-full.png');
   }
 
